--- a/Test-api.ipynb
+++ b/Test-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,21 +11,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Response [500]>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'New user created. Name: pepe'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"http://localhost:3000/user/create/pepe\"\n",
+    "res = requests.get(url)\n",
+    "res.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'User already exists. Please, try with other name'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "url = \"http://localhost:3000/user/create/carlos\"\n",
     "res = requests.get(url)\n",
-    "print(res)"
+    "res.json()"
    ]
   },
   {
@@ -37,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,54 +99,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n",
-      "<Response [500]>\n"
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n",
+      "User already exists. Please, try with other name\n"
      ]
     }
    ],
    "source": [
     "for nombres in personajes:\n",
-    "    f\"http://localhost:3000/user/create/{nombres}\"\n",
+    "    url = f\"http://localhost:3000/user/create/{nombres['name']}\"\n",
     "    res = requests.get(url)\n",
-    "    print(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url_user = \"http://localhost:27017/user/create\"\n",
-    "for nombres in personajes: \n",
-    "requests.post(url_user, data=nombres)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Insert sentences in DataBase"
+    "    res.json()\n",
+    "    print(res.json())"
    ]
   },
   {
@@ -116,6 +145,200 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Create a chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': {'$oid': '5f0ec754abe0b87b7bb20699'}, 'chat_name': 'Presidential Group'}\n",
+      "{'_id': {'$oid': '5f0ec754abe0b87b7bb2069a'}, 'chat_name': 'Superior Intelligence'}\n",
+      "{'_id': {'$oid': '5f0ec754abe0b87b7bb2069b'}, 'chat_name': 'Rockstars'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "chats=[\"Presidential Group\",\"Superior Intelligence\",\"Rockstars\"]\n",
+    "for chat in chats:\n",
+    "    url = f\"http://localhost:3000/chat/create/{chat}\"\n",
+    "    res=requests.get(url)\n",
+    "    print(res.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Add user to the chat "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chat_name': 'Presidential Group', 'participants': ['Donald Trump']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "presidents=[\"Pedro Sánchez\",\"Donald Trump\"]\n",
+    "for name in presidents:\n",
+    "    url= f\"http://localhost:3000/chat/Presidential Group/adduser/{name}\"\n",
+    "    res=requests.get(url)\n",
+    "print(res.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chat_name': 'Superior Intelligence', 'participants': ['Albert Einstein', 'Elon Musk', 'Adolph Gottlieb']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "smartpeople=[\"Albert Einstein\",\"Elon Musk\",\"Adolph Gottlieb\"]\n",
+    "for name in smartpeople:\n",
+    "    url= f\"http://localhost:3000/chat/Superior Intelligence/adduser/{name}\"\n",
+    "    res=requests.get(url)\n",
+    "print(res.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rockstars=[\"Bono\",\"Bon Jovi\",\"Charles Manson\"]\n",
+    "for name in smartpeople:\n",
+    "    url= f\"http://localhost:3000/chat/Rockstars/adduser/{name}\"\n",
+    "    res=requests.get(url)\n",
+    "print(res.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Add messages to chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"chat_name\": \"Before Sunrise\", \"name\": \"Adolf Hitler\", \"message\": \"Everything that's interesting costs a little bit of money. I'm telling you.\"}\n",
+      "{\"chat_name\": \"Before Sunrise\", \"name\": \"Adolf Hitler\", \"message\": \"I don't know, I think that if I could just accept the fact that my life is supposed to be difficult. You know, that's what to be expected, then I might not get so pissed-off about it and I'll just be glad when something nice happens.\"}\n",
+      "{\"chat_name\": \"Before Sunrise\", \"name\": \"Adolf Hitler\", \"message\": \"People always talk about how love is this totally unselfish, giving thing, but if you think about it, there's nothing more selfish.\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Trump_text=[\"Everything that's interesting costs a little bit of money. I'm telling you.\",\n",
+    "          \"I don't know, I think that if I could just accept the fact that my life is supposed to be difficult. You know, that's what to be expected, then I might not get so pissed-off about it and I'll just be glad when something nice happens.\",\n",
+    "          \"People always talk about how love is this totally unselfish, giving thing, but if you think about it, there's nothing more selfish.\"]\n",
+    "for message in Trump_text:\n",
+    "    url= f\"http://localhost:3000/chat/Before Sunrise/user/Adolf Hitler/addmessage/{message}\"\n",
+    "    res=requests.get(url)\n",
+    "    print(res.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Einstein_text=[\"Everything that's interesting costs a little bit of money. I'm telling you.\",\n",
+    "          \"I don't know, I think that if I could just accept the fact that my life is supposed to be difficult. You know, that's what to be expected, then I might not get so pissed-off about it and I'll just be glad when something nice happens.\",\n",
+    "          \"People always talk about how love is this totally unselfish, giving thing, but if you think about it, there's nothing more selfish.\"]\n",
+    "for message in Einstein_text:\n",
+    "    url= f\"http://localhost:3000/chat/Before Sunrise/user/Adolf Hitler/addmessage/{message}\"\n",
+    "    res=requests.get(url)\n",
+    "    print(res.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Manson_text=[\"Everything that's interesting costs a little bit of money. I'm telling you.\",\n",
+    "          \"I don't know, I think that if I could just accept the fact that my life is supposed to be difficult. You know, that's what to be expected, then I might not get so pissed-off about it and I'll just be glad when something nice happens.\",\n",
+    "          \"People always talk about how love is this totally unselfish, giving thing, but if you think about it, there's nothing more selfish.\"]\n",
+    "for message in Manson_text:\n",
+    "    url= f\"http://localhost:3000/chat/Before Sunrise/user/Adolf Hitler/addmessage/{message}\"\n",
+    "    res=requests.get(url)\n",
+    "    print(res.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Show all the messages of the conversations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chat_name': 'Before Sunrise', 'message': [\"Everything that's interesting costs a little bit of money. I'm telling you.\", \"I don't know, I think that if I could just accept the fact that my life is supposed to be difficult. You know, that's what to be expected, then I might not get so pissed-off about it and I'll just be glad when something nice happens.\", \"People always talk about how love is this totally unselfish, giving thing, but if you think about it, there's nothing more selfish.\"]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = f\"http://localhost:3000/chat/{'Before Sunrise'}/list\"\n",
+    "res = requests.get(url)\n",
+    "print(res.json())"
+   ]
   }
  ],
  "metadata": {
